--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,8 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: url("../images/mobile/image-hero.jpg") no-repeat center top;
+  background: url("../images/mobile/image-hero.jpg") no-repeat center;
+  background-size: cover;
 }
 
 header {
@@ -56,4 +57,14 @@ header .container {
 
 .logo {
   width: 50%;
+}
+
+h1 {
+  color: var(--white-clr);
+  font-weight: 300;
+  text-transform: uppercase;
+  border: var(--white-clr) 2px solid;
+  padding: 1.5rem;
+  font-size: 2.5rem;
+  margin: 10rem 0;
 }
